  Descriptor with include of centralized version (in headers within bdos
  directory only). Submitted by Rober Burrows. (VRI)
- desk/desk_rsc.c desk/deskact.c desk/deskmain.c desk/deskmain.h
  desk/desksupp.c: Static cleanup. Contributed by Eero Tamminen. (VRI)
- Makefile: Display the amount of extra bytes when the sized images are too
  big. (VRI)

2011-09-12
- bdos/bios.h bdos/mem.h: Remove unused items from bdos/bios.h, and move
  definitions of MPB & MD to mem.h. Submitted by Roger Burrows. (VRI)
- include/funcdef.h include/gsxdefs.h include/obdefs.h include/taddr.h: Several
  headers are duplicated between the aes & desk directories. This patch moves
  funcdef.h, gsxdefs.h, obdefs.h, and taddr.h from aes/ to include/, and removes
  the corresponding headers from desk/. Submitted by Roger Burrows. (VRI)
- doc/bios.txt: Converted line endings to LF format. (VRI)
- bios/screen.c desk/deskact.c: Fixed warnings. (VRI)
- bios/lineainit.c bios/machine.c bios/machine.h bios/memory.S bios/screen.c
  bios/xbios.c desk/deskmain.c include/config.h vdi/vdi_col.c: Splitted
  CONF_WITH_FALCON into CONF_WITH_FALCON_MMU and CONF_WITH_VIDEL and added
  tests systematically. (VRI)
- bios/machine.c bios/machine.h bios/screen.c bios/xbios.c desk/deskmain.c
  include/config.h vdi/vdi_col.c: Renamed CONF_WITH_TT to CONF_WITH_TT_SHIFTER
  and added tests systematically. (VRI)
- bios/bios.c bios/clock.c bios/country.c bios/machine.h bios/nvram.c
  bios/nvram.h bios/screen.c bios/xbios.c: Use CONF_WITH_NVRAM
  systematically. (VRI)
- bios/machine.c bios/machine.h bios/screen.c bios/vectors.S include/config.h
  vdi/vdi_col.c: Added the CONF_WITH_STE_SHIFTER define. (VRI)
- bios/bios.c bios/dmasound.c bios/dmasound.h bios/machine.c bios/machine.h:
  Added the CONF_WITH_DMASOUND define. (VRI)
- bios/machine.c bios/machine.h include/config.h: Added the CONF_WITH_VME
  define. (VRI)
- bios/machine.c bios/machine.h include/config.h: Added the
  CONF_WITH_DIP_SWITCHES define. (VRI)